# urwid-assets

./: .gitignore  README.md  app.py  application.py  application_module.py  base_module.py  base_parser.py  base_types.py  data.py  data_manager.py  environment.yml  main.py  pyproject.toml  test_data.py  ui.py  ui_manager.py  uimanager.py  widgets.py
application/: __init__.py  application.py  application_module.py
commands/export/: export.py  export_command.py  export_module.py
commands/import_/: import_.py  import_command.py  import_module.py  import_types.py
commands/ui/: ui.py  ui_command.py  ui_module.py  ui_types.py
controllers/: data_controller.py  ui_controller.py
data_sources/: test.py  tiingo.py
data_sources/crypto_compare/: asset_crypto_compare_endpoint.py  crypto_compare.py  crypto_compare_aggregate.py  crypto_compare_endpoint.py  crypto_compare_endpoint_aggregate.py  crypto_compare_endpoint_historical_aggregate.py  crypto_compare_historical_aggregate.py
data_sources/tiingo/: crypto_tiingo_endpoint.py  forex_tiingo_endpoint.py  tiingo.py  (+7 more)
encryption/: __init__.py  encryption.py
models/: models.py
state/: __init__.py  models.py  reducer.py  state.py  test_data.py
test_data/: assets.py  data_sources.py  snapshots.py  test_data.py
views/: application_root.py  application_view.py  asset_dialog_config.py  current_assets_screen.py  current_assets_view.py  current_view.py  data_source_dialog_config.py  data_sources_view.py  edit_asset_dialog.py  layout_view.py  log_screen.py  log_view.py  side_bar_view.py  splash_screen.py  splash_view.py
(+178 files in other folders)
